# fm-ddr-to-llm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.tickets/: .gitignore  fdtl-2t1d.md  fdtl-6plc.md  fdtl-ayff.md  fdtl-cn5n.md  fdtl-dqd6.md  fdtl-kycw.md  fdtl-qfq2.md  fdtl-r3w1.md  fdtl-sq94.md  fdtl-wygv.md
docs/epic/Active/(EPIC-001)-DDR-XML-ID-Extractor/: (EPIC-001)-DDR-XML-ID-Extractor.md
docs/epic/Active/(EPIC-002)-Cross-Reference-Graph-Builder/: (EPIC-002)-Cross-Reference-Graph-Builder.md
docs/epic/Active/(EPIC-003)-Pipeline-CLI-and-Structured-Output/: (EPIC-003)-Pipeline-CLI-and-Structured-Output.md
docs/runbook/Active/(RUNBOOK-001)-Process-DDR-XML/: (RUNBOOK-001)-Process-DDR-XML.md
docs/superpowers/specs/: 2026-03-16-fm-ddr-to-llm-vision-design.md
docs/troves/ddrparser/: manifest.yaml  synthesis.md
docs/troves/ddrparser/sources/ddrparser-distribution/: ddrparser-distribution.md
docs/troves/ddrparser/sources/horneks-ddrparser/: horneks-ddrparser.md
docs/troves/ddrparser/sources/horneks-git-source-control-ddrparser/: horneks-git-source-control-ddrparser.md
docs/vision/Active/(VISION-001)-FM-DDR-to-LLM/: (VISION-001)-FM-DDR-to-LLM.md
src/fm_ddr_to_llm/: __init__.py  cli.py  ddrparser.py  extractor.py  graph.py  object_types.py  pipeline.py  registry.py
tests/: conftest.py  test_cli.py  test_ddrparser.py  test_extractor.py  test_graph.py  test_object_types.py  test_pipeline.py  test_registry.py
