[project]
name = "fm-ddr-to-llm"
version = "0.1.0"
description = "Deterministic pipeline that converts FileMaker DDR XML into structured, cross-referenced output for LLM consumption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fm-ddr-to-llm = "fm_ddr_to_llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fm_ddr_to_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
